# crystal-news

./: .gitignore  Cargo.toml  README.md
client/: next.config.js  package.json
client/pages/: _app.tsx  index.tsx  register.tsx
client/src/: types.ts
client/src/components/: AppLayout.tsx
client/src/components/AppLayout/: index.tsx  style.module.scss
client/src/components/Feed/: index.tsx
client/src/components/LoginForm/: index.tsx  style.module.scss
client/src/components/Modal/: index.tsx
client/src/components/RegisterForm/: index.tsx  style.module.scss
client/src/components/Sidebar/: index.tsx  style.module.scss
client/src/components/SidebarSources/: index.tsx  style.module.scss
client/src/lib/: auth.ts  cookie.ts  hooks.ts  utils.ts
client/src/middleware/: authGuard.tsx
client/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
client/src/pages/feed/: [id].tsx  all.tsx
client/src/store/: index.ts
client/src/store/actions/: actionTypes.ts  authActions.ts  (+1 more)
client/src/styles/: colors.scss  global.scss
client/store/: index.ts
migrations/: 20210612234632_create-users.sql  20210614124211_refresh-token.sql  20210618224457_sources.sql  20210621165512_articles.sql  20211010212049_init_schema.sql
src/: config.rs  error.rs  feed.rs  jwt.rs  lib.rs  main.rs
src/api/: config.rs  error.rs  mod.rs  routes.rs
src/db/: article.rs  mod.rs  refresh_token.rs  source.rs  user.rs
src/middleware/: auth_middleware.rs
src/models/: refresh_token.rs  user.rs
src/routes/: articles.rs  auth.rs  mod.rs  sources.rs
src/util/: jwt.rs  mod.rs
(+1 files in other folders)
