[package]
name = "crystal-news"
version = "0.1.0"
authors = ["Kamui <qntmmagic7@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-rt = "1"
actix-cors = "0.5.4"
rand = "0.8.3"
rust-argon2 = "0.8.3"
dotenv = "0.15.0"
envconfig = "0.9.1"
jsonwebtoken = "7.2.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls", "postgres", "chrono"]}
chrono = { version = "0.4.19", features = ["serde"]}
regex = "1.5.4"
validator = { version = "0.12", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4.0"
async-trait = "0.1.50"
uuid = {version = "0.8.2", features = ["v4"]}
futures = "0.3.15"
rss = "1.10.0"
derive_more = "0.99.14"
time = "0.2.27"
reqwest = "0.10.5"
